--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Kokoa Talk</title>
-    <link rel="stylesheet" href="css/index.css" />
-    
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -27,15 +26,17 @@
         If you have a Kokoa Account, log in with you email or phone number.
       </p>
     </header>
-    <for id = "login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" metho="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="userpassword" type="password" placeholder="Password" />
 
       <input type="submit" value="Log in" />
       <input type="submit" value="Sign up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/91f739af8c.js"
       crossorigin="anonymous"
