--- a/find.html
+++ b/find.html
@@ -39,11 +39,11 @@
 
         <div class="recommended-friends">
             <h6 class = "recommended-friends__title">Recommended Friends</h6>
-            <span>You hav no recommended friends.</span>
+            <span>You have no recommended friends.</span>
         </div>
         <div class="open-chat">
             <div class="open-chat__header">
-                <h4>Opent Chat</h4>
+                <h4>Open Chat</h4>
                 <span>Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i></span>
 
             </div>
