--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         If you have a Kokoa Account, log in with you email or phone number.
       </p>
     </header>
-    <form action="friends.html" metho="get" id="login-form">
+    <form action="friends.html" method="get" id="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="userpassword" type="password" placeholder="Password" />
 
